[package]
name = "byteproc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
zmq = "0.10"
log = "0.4"
simplelog = "0.11"
zeroize = "1.5"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.19.1"
